--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
 	implementation 'com.auth0:java-jwt:4.2.1'
 
+	implementation'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
