--- a/build.gradle
+++ b/build.gradle
@@ -59,18 +59,18 @@ jacocoTestCoverageVerification {
 //			 includes = []
 
 			// 라인 커버리지 제한을 80%로 설정
-			limit {
-				counter = 'LINE'
-				value = 'COVEREDRATIO'
-				minimum = 0.80
-			}
-
-			// 브랜치 커버리지 제한을 80%로 설정
-			limit {
-				counter = 'BRANCH'
-				value = 'COVEREDRATIO'
-				minimum = 0.80
-			}
+//			limit {
+//				counter = 'LINE'
+//				value = 'COVEREDRATIO'
+//				minimum = 0.80
+//			}
+//
+//			// 브랜치 커버리지 제한을 80%로 설정
+//			limit {
+//				counter = 'BRANCH'
+//				value = 'COVEREDRATIO'
+//				minimum = 0.80
+//			}
 
 			// 빈 줄을 제외한 코드의 라인수를 최대 200라인으로 제한합니다.
 			limit {
